--- a/index.html
+++ b/index.html
@@ -1,55 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karthick Sakkaravarthi</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100 text-gray-900">
-    <header class="bg-white shadow">
-        <div class="container mx-auto p-6">
-            <h1 class="text-3xl font-bold">Karthick Sakkaravathi</h1>
-            <p class="text-xl">SDE</p>
-        </div>
-    </header>
-
-    <main class="container mx-auto p-6">
-        <section id="skills" class="my-8">
-            <h2 class="text-2xl font-semibold">Skills</h2>
-            <ul class="list-disc list-inside mt-4">
-                <li>Python</li>
-                <li>JavaScript</li>
-                <li>Django</li>
-                <li>Vue.js</li>
-            </ul>
-        </section>
-
-        <section id="projects" class="my-8">
-            <h2 class="text-2xl font-semibold">Projects</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-4">
-                <!-- Example Project -->
-                <!-- <div class="bg-white p-6 rounded-lg shadow">
-                    <h3 class="text-xl font-bold">Project Name</h3>
-                    <p class="mt-2">Description of the project.</p>
-                    <a href="#" class="text-blue-500 mt-4 block">View Project</a>
-                </div> -->
-                <!-- Repeat for more projects -->
-            </div>
-        </section>
-
-        <!-- <section id="experience" class="my-8">
-            <h2 class="text-2xl font-semibold">Experience</h2>
-            <ul class="list-disc list-inside mt-4">
-                <li>Job Title at Company - Duration</li>
-            </ul>
-        </section> -->
-    </main>
-
-    <footer class="bg-white shadow mt-12">
-        <div class="container mx-auto p-6 text-center">
-            <p>&copy; 2024 Karthick Sakkaravarthi. All rights reserved.</p>
-        </div>
-    </footer>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>DeveloperFolio | Developer Portfolio Template</title><meta name="title" content="DeveloperFolio | Developer Portfolio Template"><meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"><meta property="og:type" content="website"><meta property="og:url" content="https://developerfolio.js.org/"><meta property="og:title" content="DeveloperFolio | Developer Portfolio Template"><meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://developerfolio.js.org/"><meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template"><meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"><meta name="msapplication-TileColor" content="#603cba"><meta name="theme-color" content="#6c63ff"/><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v8=qAJ44G5Bm7"><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v8=qAJ44G5Bm7"><link rel="mask-icon" href="/safari-pinned-tab.svg?v8=qAJ44G5Bm7" color="#885bd5"><link rel="shortcut icon" href="/favicon.ico?v8=qAJ44G5Bm7"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v8=qAJ44G5Bm7"><link rel="manifest" href="/manifest.json"/><link rel="preload" href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin><link rel="preload" href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin><script async src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-135618960-2")</script><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css"><script defer="defer" src="/static/js/main.19c04844.js"></script><link href="/static/css/main.272dfe11.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
