--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>DeveloperFolio | Developer Portfolio Template</title>
+    <title>Karthick Sakkaravarthi</title>
     <meta
       name="title"
-      content="DeveloperFolio | Developer Portfolio Template"
+      content="Karthick Sakkaravarthi"
     />
     <meta
       name="description"
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://developerfolio.js.org/" />
     <meta
       property="og:title"
-      content="DeveloperFolio | Developer Portfolio Template"
+      content="Karthick Sakkaravarthi"
     />
     <meta
       property="og:description"
@@ -26,7 +26,7 @@
     <meta property="twitter:url" content="https://developerfolio.js.org/" />
     <meta
       property="twitter:title"
-      content="DeveloperFolio | Developer Portfolio Template"
+      content="Karthick Sakkaravarthi"
     />
     <meta
       property="twitter:description"
